# swsurface-rs

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl
examples/: LICENSE.md  basic.rs  horse.tar.zstd  transparent.rs
src/: align.rs  buffer.rs  cgl.rs  cglffi.rs  lib.rs  objcutils.rs  unix.rs  windows.rs
src/unix/: wayland.rs  x11.rs
