[package]
name = "swsurface"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/swsurface-rs"
description = "Software-rendered surface for winit"
keywords = ["graphics"]

[dependencies]
winit = ">= 0.20.0-alpha1, < 0.21"
owning_ref = "0.4.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2.6"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.6"
features = [
	"wingdi",
	"winuser",
]

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "0.2"
cocoa = "0.18"
core-foundation = "0.6"
core-graphics = "0.17"

[dev-dependencies]
lazy_static = "1"
zstd = "0.4.14"
tar = "0.4.26"
log = "0.4"
simple_logger = "1"
rand = "0.6.5"

[dev-dependencies.image]
git = "https://github.com/yvt/image.git"
rev = "6bbe8c679b5bff08eb37ab5409154aa962c82567"
