[package]
name = "swsurface"
version = "0.1.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/swsurface-rs"
description = "Software-rendered surface for winit"
keywords = ["graphics"]

[dependencies]
winit = ">= 0.20.0-alpha1, < 0.21"
owning_ref = "0.4.0"
log = "0.4"
lazy_static = "1"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2.6"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.6"
features = [
	"wingdi",
	"winuser",
]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.18"
core-foundation = "0.6"
core-graphics = "0.17"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11-dl = "2.18.3"
calloop = "0.4.2"
wayland-client = { version = "0.23.0", features = ["dlopen", "eventloop"] }
wayland-sys = "0.23.5"
smithay-client-toolkit = "0.6"
fragile = "0.3.0"
either = "1.5.2"

[dev-dependencies]
zstd = "0.4.14"
tar = "0.4.26"
simple_logger = "1"
rand = "0.6.5"
image = "0.22.1"

[patch.crates-io.image]
git = "https://github.com/image-rs/image.git"
rev = "3287608628a77aab035d9c5edebacab162fd63e5"
